Bug 350351 - Content assist window never shows scrollbar https://bugs.eclipse.org/bugs/show_bug.cgi?id=350351

--- a/bundles/org.eclipse.orion.client.core/web/css/ide.css
+++ b/bundles/org.eclipse.orion.client.core/web/css/ide.css
@@ -482,6 +482,9 @@ a:hover {
 	border: 2px inset #DDD;
 	z-index:10;
 	cursor: default;
+	overflow: auto;
+	height: 150px;
+	width: 200px;
 }
 
 .contentassist .selected {
